add examples for AccountHooks
Signed-off-by: emiliyank <e.kadiyski@gmail.com>